# machina

./: .gitignore  CMakeLists.txt  Doxyfile.in  FindGUROBI.cmake  LICENSE.txt  README.md
data/: README.md
data/gundem_2015/: coloring.txt  generateFrequencies.py  generateFrequencies.sh
data/gundem_2015/A22_noCNA/: A22-hist.ipynb  A22_copynumber.csv  A22_variants.csv  README.md  count.txt  process.py  reads_A22.tsv
data/gundem_2015/raw/: A10.txt  A12.txt  A17.txt  A21.txt  A22.txt  A24.txt  A29.txt  A31.txt  A32.txt  A34.txt  README.md  samples.txt
data/gundem_2015/reported_clonetrees/: A10.dot  A10.labeling  A10.tree  A22.dot  A22.labeling  A22.tree  A29.dot  A29.labeling  A29.tree  A31.dot  A31.labeling  A31.tree  A32.dot  A32.labeling  A32.tree
data/hoadley_2016/: coloring.txt  run_SPRUCE.sh  transform.py
data/hoadley_2016/A1/: A1_MACHINA_0.95.tsv  F.tsv  sol0.tree  sol1.tree  sol2.tree  sol3.tree
data/hoadley_2016/A7/: A7_MACHINA_0.95.tsv  F.tsv  sol0.tree  sol1.tree
data/mcpherson_2016/: coloring.txt  patient1.labeling  patient1.reported.labeling  patient1.tree  patient10.labeling  patient10.reported.labeling  patient10.tree  patient2.labeling  patient2.reported.labeling  patient2.tree  patient3.labeling  patient3.reported.labeling  patient3.tree  patient4.labeling  patient4.reported.labeling  patient4.tree  patient7.labeling  patient7.reported.labeling  patient7.tree  patient9.labeling  patient9.reported.labeling  patient9.tree
data/sanborn_2015/: coloring.txt  parse.ipynb  reads_A.tsv  reads_B.tsv  reads_C.tsv  reads_D.tsv  reads_E.tsv  reads_F.tsv  reads_G.tsv
data/sanborn_2015/raw/: patient_A.csv  patient_B.csv  patient_C.csv  patient_D.csv  patient_E.csv  patient_F.csv  patient_G.csv  patient_H.csv  samples_A.txt  samples_B.txt  samples_C.txt  samples_D.txt  samples_E.txt  samples_F.txt  samples_G.txt  samples_H.txt
data/sims/: README.md  analysis.ipynb  coloring.txt
data/sims/m8_downsampled/: downsample.sh
data/sims/scripts/: create_pastri_input.bash  create_pastri_input.py  create_phylowgs_input.bash  create_phylowgs_input.py
result/: README.md
result/gundem_2015/: README.md  colors.txt  run.sh  run_A22_noCNA.sh
result/hoadley_2016/: run_A1.sh  run_A7.sh
result/hoadley_2016/treeomics/: A1_sub_treeomics.labeling  A1_sub_treeomics.tree  A1_treeomics.labeling  A1_treeomics.tree  A7_sub_treeomics.labeling  A7_sub_treeomics.tree
result/mcpherson_2016/: run_pmh.sh  run_pmh_pr.sh  run_pmh_sankoff.sh  run_pmh_tr.sh  run_sankoff.sh
result/sanborn_2015/: run.sh
result/sims/: README.md  run.sh  run_sankoff.sh  simulations_1.ipynb  simulations_2.ipynb  simulations_3.ipynb
result/sims/ancestree/: results_m5.txt  results_m8.txt  run.sh
result/sims/clustering/: README.md  ancestree.sh  clomial.R  clomial.sh  clomial_slurm.sh  clustering.ipynb  clustering.py  compare.py  compare.sh  convert_reads_to_clomial.py  convert_reads_to_pyclone.py  convert_reads_to_sciclone.py  parse_clomial_output.py  parse_phylowgs_output.py  parse_pyclone_output.py  parse_sciclone_output.py  phylowgs.sh  process_pyclone.sh  pyclone.sh  pyclone_slurm.sh  pyclone_slurm_binomial.sh  result.tsv  sciclone.R  sciclone.sh  sciclone_slurm.sh
result/sims/machina/: cluster.sh  evaluate_mig_history.py  extract_interval_width.py  extract_interval_width.sh  extract_interval_width2.py  extract_interval_width2_true.py  extract_minimum.py  generate_slurm_pmh_cti.sh  generate_slurm_pmh_cti_pre_clustered.sh  interval_width_m5.tsv  mut_trees.sh  mut_trees_preclustered.sh  process.sh  process_pmh_cti.sh  results_CLUSTERING_m5_downsampled.txt  results_CLUSTERING_m8_downsampled.txt  results_CLUSTERING_m8_mutrates.txt  results_MACHINA_clomial_m5.txt  results_MACHINA_clomial_m8.txt  results_MACHINA_downsampled_m5.txt  results_MACHINA_downsampled_m5_old.txt  results_MACHINA_m5.txt  results_MACHINA_m8.txt  results_MACHINA_m8_downsampled.txt  results_MACHINA_m8_mutrates.txt  results_MACHINA_phylowgs_m5.txt  results_MACHINA_phylowgs_m8.txt  results_MACHINA_pyclone_m5.txt  results_MACHINA_pyclone_m8.txt  results_MACHINA_sciclone_m5.txt  results_MACHINA_sciclone_m8.txt  run.sh  run_sankoff.sh
result/sims/neighbor_joining/: README.md  convert_reads_to_nj.py  newickToTree.py  process_m5.sh  process_m8.sh  results_m5.txt  results_m8.txt  (+1 more)
src/: basematrix.cpp  basematrix.h  basetree.cpp  basetree.h  binarytree.cpp  binarytree.h  charactertree.cpp  charactertree.h  clonetree.cpp  clonetree.h  enumeratecanonicalclonetrees.cpp  enumeratecanonicalclonetrees.h  enumeratemutationtrees.cpp  enumeratemutationtrees.h  frequencymatrix.cpp  frequencymatrix.h  gabowmyers.cpp  gabowmyers.h  generatemain.cpp  generatemigrationtreesmain.cpp  generatemutationtreesmain.cpp  ilpbinarizationsolver.cpp  ilpbinarizationsolver.h  ilpbinarizationsolverext.cpp  ilpbinarizationsolverext.h  ilppmhsolver.cpp  ilppmhsolver.h  ilppmhtisolver.cpp  ilppmhtisolver.h  ilppmhtrsolver.cpp  ilppmhtrsolver.h  ilppmhtrsolvercallback.cpp  ilppmhtrsolvercallback.h  ilpsolver.cpp  ilpsolver.h  ilpsolverext.cpp  ilpsolverext.h  migrationgraph.cpp  migrationgraph.h  migrationtree.cpp  (+31 more)
src/cluster/: cluster.cpp  cluster.h  clustermain.cpp  readmatrix.cpp  readmatrix.h  readsmain.cpp
src/old_ilps/: ilpbinarizationsolver.cpp  ilpbinarizationsolver.h  ilpsolver.cpp  ilpsolver.h  ilpsolverext.cpp  ilpsolverext.h
src/simulation/: beta_distribution.hpp  cell.cpp  cell.h  downsamplemain.cpp  simulation.cpp  simulation.h  simulationmain.cpp
src/spruce/: matrix.cpp  matrix.h  perfectphylograph.cpp  perfectphylograph.h  perfectphylomatrix.cpp  perfectphylomatrix.h  perfectphylotree.cpp  perfectphylotree.h  realmatrix.cpp  realmatrix.h  realtensor.cpp  realtensor.h  rootedcladisticancestrygraph.cpp  rootedcladisticancestrygraph.h  rootedcladisticenumeration.cpp  rootedcladisticenumeration.h  rootedcladisticnoisyancestrygraph.cpp  rootedcladisticnoisyancestrygraph.h  rootedcladisticnoisyenumeration.cpp  rootedcladisticnoisyenumeration.h  solution.cpp  solution.h  solutionset.cpp  solutionset.h  statetree.cpp  statetree.h  tensor.cpp  tensor.h
(+6403 files in other folders)
